plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.team8'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot 기본 의존성
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security' // ✅ Spring Security 추가

	// Swagger OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Devtools (개발용)
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Database (H2)
	runtimeOnly 'com.h2database:h2'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 외부 링크의 메타 데이터 추출 라이브러리 Jsoup
	implementation 'org.jsoup:jsoup:1.15.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
